--- a/automotive/src/main/res/values/colors.xml
+++ b/automotive/src/main/res/values/colors.xml
@@ -6,4 +6,6 @@
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
     <color name="colorGreen">#96c896</color>
+    <color name="grey">#ff424242</color>
+
 </resources>
